<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.co.viditkothari.bihartourguide.MainActivity"
    android:orientation="vertical"
    android:weightSum="4">

    <TextView
        android:id="@+id/btn_events"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorEvent"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/str_events" />
    <TextView
        android:id="@+id/btn_restaurants"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorRestaurant"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/str_restaurants" />
    <TextView
        android:id="@+id/btn_historicalplaces"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorHistorical"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/str_historical" />
    <TextView
        android:id="@+id/btn_landmarks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorLandmarks"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/str_landmarks" />

</LinearLayout>
