<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/attr_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/attr_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/listitem_name"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/attr_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/listitem_date"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/attr_name"/>

        <TextView
            android:id="@+id/attr_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="14sp"
            android:text="@string/listitem_loc"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/attr_name"/>

        <TextView
            android:id="@+id/attr_owner_organiser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="14sp"
            android:text="@string/listitem_own"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/attr_location"/>

        <TextView
            android:id="@+id/attr_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="14sp"
            android:text="@string/listitem_desc"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/attr_owner_organiser"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:background="#BBB"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"/>

</LinearLayout>